# LWDA2023-IR-community

./: .gitignore  README.md  address_to_geocode.ipynb  analysis-top10.ipynb  ir-coauthors-2020-2023.gephi  pyproject.toml  scrape_dois.ipynb  test2.ipynb
data/: IR_Institute_konsolidierte_Liste.xlsx  IR_Institute_konsolidierte_Liste_geocoded.csv  IR_Institute_konsolidierte_Liste_geocoded.xlsx  data.csv  dois.csv  gephi.csv  publications.csv
data/processed/: IR_inst_comb_list_geocoded.xlsx  ir-community-centrality.csv  ir-community-centrality.xlsx
export/: IR_Institute_metadata.json
ir_community/: ir_community.py  run.py
notebooks/: address_to_geocode.ipynb  analysis.ipynb  analysis_10_years.ipynb  scrape_dois.ipynb
