[tool.poetry]
name = "ir_community"
version = "0.1.0"
description = ""
authors = ["jueri <jueri.keller@th-koeln.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.7.0"
pandas = "^2.1.3"
geopy = "^2.4.0"
pandas-stubs = "^2.1.1.230928"
ipykernel = "^6.26.0"
requests = "^2.31.0"
pyalex = "^0.13"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
